RESOLVED FIXED97561
[Qt][WK2] REGRESSION(r128980): It broke all QRawWebView API test
https://bugs.webkit.org/show_bug.cgi?id=97561
Summary [Qt][WK2] REGRESSION(r128980): It broke all QRawWebView API test
Csaba Osztrogonác
Reported 2012-09-25 05:32:28 PDT
********* Start testing of tst_qrawwebview ********* Config: Using QTest library 5.0.0, Qt 5.0.0 PASS : tst_qrawwebview::initTestCase() FAIL! : tst_qrawwebview::paint() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::paint() 'compareImages(QImage(expectation), image.rgbSwapped(), 5)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(227)] FAIL! : tst_qrawwebview::noBackground1() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::noBackground1() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::noBackground2() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::noBackground2() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::noBackground3() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::noBackground3() '::waitForSignal(this, SIGNAL(loaded()), 5000)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(86)] FAIL! : tst_qrawwebview::noBackground3() 'compareImages(QImage(expectation), image.rgbSwapped(), 5)' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qrawwebview/tst_qrawwebview.cpp(227)] PASS : tst_qrawwebview::cleanupTestCase() Totals: 2 passed, 9 failed, 0 skipped ********* Finished testing of tst_qrawwebview *********
Attachments
Patch (4.60 KB, patch)
2012-09-25 07:12 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-09-25 05:35:14 PDT
I guess I know what is the issue here. I'm going to look into this ASAP.
Balazs Kelemen
Comment 2 2012-09-25 07:12:13 PDT
Balazs Kelemen
Comment 3 2012-09-27 11:41:21 PDT
Comment on attachment 165608 [details] Patch Clearing flags on attachment: 165608 Committed r129782: <http://trac.webkit.org/changeset/129782>
Balazs Kelemen
Comment 4 2012-09-27 11:41:26 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5 2012-09-28 00:29:15 PDT
Reopen, because nothing changed, tests still fail.
Balazs Kelemen
Comment 6 2012-09-28 00:43:08 PDT
(In reply to comment #5) > Reopen, because nothing changed, tests still fail. Thanks, I will take a look. Strange because the patch really fixed this for me.
Balazs Kelemen
Comment 7 2012-09-28 01:23:05 PDT
(In reply to comment #6) > (In reply to comment #5) > > Reopen, because nothing changed, tests still fail. > > Thanks, I will take a look. Strange because the patch really fixed this for me. After update it fails for me as well, so either I am schizophrenic and tricking myself or it is a new regression.
Balazs Kelemen
Comment 8 2012-09-28 04:48:48 PDT
Yep, if I apply it on the regressing patch directly, it fixes the issue. Now I need to find out what made it wrong again.
Balazs Kelemen
Comment 9 2012-09-28 06:36:39 PDT
I'm going to track the new bug in bug 97907.
Note You need to log in before you can comment on or make changes to this bug.