Source/WebKit2/UIProcess/API/qt/raw/qrawwebview_p.h
@@ -47,6 +47,10 @@ QT_END_NAMESPACE
 
 class QRawWebViewPrivate;
 
+namespace WebKit {
+class LayerTreeRenderer;
+}
+
 class QRawWebViewClient {
 public:
     virtual ~QRawWebViewClient() { }
@@ -97,6 +101,8 @@ public:
     void sendTouchEvent(QTouchEvent*);
 
 private:
+    WebKit::LayerTreeRenderer* layerTreeRenderer() const;
+
     QRawWebViewPrivate* d;
 };
 
